--- a/wiki/rubber.wikitext
+++ b/wiki/rubber.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Noun===
 '''rubber'''
 
@@ -6,12 +7,14 @@
 #an [[eraser]] (from: to [[rub]]) (''UK'')
 #a [[condom]] (''Aust: slang'')
 
-==Synonyms==
+===Synonyms===
 see [[WikiSaurus:condom]]
 
 ====Translations====
 *Dutch: rubber ''n'' (1), [[kunstrubber]] ''n'' (2), [[gom]] ''m'' (3), [[condoom]] ''m'' (4)
-*French: [[caoutchouc]] ''m'' (1), [[capote]] ''f'' (4)
+*French: [[caoutchouc]] ''m'' (1), [[gomme]] ''f'' (3), [[capote]] ''f'' (4)
+*Italian: [[gomma]] ''f'', gomma da cancellare (3)
+*Japanese: [[消しゴム]] (3)
 
 ----
 
