--- a/wiki/rubber.wikitext
+++ b/wiki/rubber.wikitext
@@ -11,10 +11,11 @@
 see [[WikiSaurus:condom]]
 
 ====Translations====
+*Chinese: [[橡胶]] (xiangjiao), [[橡皮]] (xiangpi), [[橡皮擦子]] (xiangpi cazi)
 *Dutch: rubber ''n'' (1), [[kunstrubber]] ''n'' (2), [[gom]] ''m'' (3), [[condoom]] ''m'' (4)
 *French: [[caoutchouc]] ''m'' (1), [[gomme]] ''f'' (3), [[capote]] ''f'' (4)
 *Italian: [[gomma]] ''f'', gomma da cancellare (3)
-*Japanese: [[消しゴム]] (3)
+*Japanese: [[ゴム]], [[消しゴム]] (3)
 
 ----
 
