--- a/wiki/rubber.wikitext
+++ b/wiki/rubber.wikitext
@@ -16,6 +16,7 @@ see [[WikiSaurus:condom]]
 *French: [[caoutchouc]] ''m'' (1), [[gomme]] ''f'' (3), [[capote]] ''f'' (4)
 *Italian: [[gomma]] ''f'', gomma da cancellare (3)
 *Japanese: [[ゴム]], [[消しゴム]] (3)
+*Afrikaans: rubber ''n'' (1), [[gomlastiek]] ''n'' (2), [[uitveer]] ''n'' (3), [[kondoom]] ''n'' (4)
 
 ----
 
