--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
-==Etymology==
+===Etymology===
 '''Durex''' is a brand name for many products. The usage of this brand name as a generic name has been adopted differently in different localities. ''Warning: do not confuse these usages as it can be quite embarrassing!''
 
-==Noun==
-*sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
-*condom (''UK: - Durex is one popular brand, and is often used as the generic name)
+===Noun===
+#sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
+#condom (''UK: - Durex is one popular brand, and is often used as the generic name)
