--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -13,6 +13,7 @@
 *[[veal]]
 
 ====Translations====
+*Afrikaans: [[kalf]] ''n'' (1)
 *[[Breton]]: [[leue]] ''m'' -où ''pl'' (1)
 *Chinese:  [[小牛]], [[犊]]
 *Danish: [[kalv]] ('''cow or leg sense?''')
