--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -39,6 +39,7 @@ Old Norse
 #(''Anatomy'') The back of the [[leg]] below the [[knee]].
 
 ====Translations====
+* Afrikaans: [[kuit] ''n'' kuite ''pl''
 *[[Breton]]: [[kof-gar]] ''m'' kofoù-gar / kofoù-divhar ''pl''
 *Chinese: [[腓]]
 *Danish: [[kalv]] ('''cow or leg sense?''')
