etym for shinpuu reading; attempt to improve this def <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -1,16 +1,19 @@
 ==Japanese==
-<!-- ===Etymology===
-[[神]] ''kami'' "god, divine" + [[風]] ''kaze'' "wind"-->
+===Etymology===
+[[神]] ''kami'' "god, divine" + [[風]] ''kaze'' "wind"
 
 ===Noun===
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
 # Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in the 13th century.
-<!--
+
+===Etymology===
+From [[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
+
 ===Noun===
 '''[[神]][[風]]''' (しんぷう, shinpū)
--->
-# Aircraft suicide attacks or attackers in Word War II.
+
+# An aircraft suicide attack squadron in Word War II.
 
 ====Translations====
 *English: [[kamikaze]]
