revert tatweel to hyphen; fix directionality; should we mark this article as controversial as is done on wikipedia? <Allah#37048>

--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Arabic [[الله]] (allāh), from [[الـ]] (al-) "the" + [[اله|إِله]] (’ilah) "god".
+Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إِله]] (’ilah) "god".
 
 ===Proper noun===
 '''Allah'''
@@ -26,5 +26,5 @@ Arabic [[الله]] (allāh), from [[الـ]] (al-) "the" + [[اله|إِله]] 
 *Slovene: [[Alah]]
 *Swedish: Allah
 
-===External link===
-*[[w:en:Allah|Wikipedia article on Allah]]
+===See also===
+*[[w:Allah|Wikipedia article on Allah]]
