--- a/wiki/%E8%85%93.wikitext
+++ b/wiki/%E8%85%93.wikitext
@@ -11,7 +11,7 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#calf
+*# [[calf]] (leg)
 *# avoid
 *# be ill
 *# wither
@@ -19,7 +19,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fei4
 
+===Compounds===
+*[[腓骨]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ひ]] (hi)
