--- a/wiki/%E8%82%A5.wikitext
+++ b/wiki/%E8%82%A5.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fat, plump, obese
-*# fertile
+*# [[fat]], [[plump]], [[obese]]
+*# [[fertile]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,58 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fei4
 
+===Compounds===
+*[[肥膘]]
+*[[肥差]]
+*[[肥肠]], [[肥肠儿]]
+*[[肥吃海喝]]
+*[[肥dada
+*[[肥大]]
+*[[肥地]]
+*[[肥嘟嘟]]
+*[[肥分]]
+*[[肥滚滚]], [[肥滚滚的]]
+*[[肥厚]]
+*[[肥力]]
+*[[肥料]]
+*[[肥溜溜]], [[肥溜溜的]]
+*[[肥美]]
+*[[肥嫩]]
+*[[肥胖]]
+*[[肥缺]]
+*[[肥肉]]
+*[[肥实]]
+*[[肥瘦儿]]
+*[[肥水]]
+*[[肥硕]]
+*[[肥田]]
+*[[肥头大耳]]
+*[[肥土]]
+*[[肥沃]]
+*[[肥效]]
+*[[肥腴]]
+*[[肥育]]
+*[[肥源]]
+*[[肥皂]]
+*[[肥皂剧]]
+*[[肥壮]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ひ]] (hi)
 ** '''[[Kun]]''': [[こえる]] (koeru), [[こやす]] (koyasu), [[こえ]] (koe)
+
+===Compounds===
+*[[肥大]]
+*[[肥満]]
+*[[肥沃]]
+*[[肥料]]
+*[[肥溜め]]
 
 * '''Other info''':  
 
