--- a/wiki/identity.wikitext
+++ b/wiki/identity.wikitext
@@ -11,9 +11,12 @@
 #(''mathematics'') An element of an algebraic structure which yields an identity function when used as an argument to an operation in that structure.
 
 ====Translations====
-
+*Chinese: [[身份]], [[个性]], [[特性]]
 *Finnish: [[henkilöllisyys]] (1), [[identiteetti]] (2), [[yhtäläisyys]] (4)
+*French: [[identité]] ''f''
 *German: [[Identität]] (f)
+*Italian: [[identità]] ''f''
+*Japanese: [[同一性]]
 *Swedish: [[identitet]]
 
 ====See also====
