--- a/wiki/identity.wikitext
+++ b/wiki/identity.wikitext
@@ -19,6 +19,12 @@
 *Japanese: [[同一性]]
 *Swedish: [[identitet]]
 
+===Related terms===
+*[[identic]]
+*[[identical]]
+*[[identification]]
+*[[identify]]
+
 ====See also====
 *[[additive identity]]
 *[[multiplicative identity]]
