--- a/wiki/%E5%95%A1.wikitext
+++ b/wiki/%E5%95%A1.wikitext
@@ -11,29 +11,33 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#morphine
-*# coffee
+*# [[morphine]]
+*# [[coffee]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': pēi (pei1)
-*** '''[[Wade-Giles]]''': p'ei<sup>1</sup>
+*** '''[[Pinyin]]''': fēi (fei1), pēi (pei1)
+*** '''[[Wade-Giles]]''': fei<sup>1</sup>, p'ei<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fe1, fei1
 
+===Compounds===
+*[[咖啡]]
+*[[吗啡]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はい]] (hai), [[へ]] (he), [[ひ]] (hi)
