--- a/wiki/%E8%9A%82.wikitext
+++ b/wiki/%E8%9A%82.wikitext
@@ -19,12 +19,12 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': mǎ (ma3)
-*** '''[[Wade-Giles]]''': ma<sup>3</sup>
+*** '''[[Pinyin]]''': mā (ma1), mǎ (ma3), mà (ma4) 
+*** '''[[Wade-Giles]]''': ma<sup>1</sup>, ma<sup>3</sup>, ma<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
@@ -33,6 +33,18 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[螞]]
+
+===Compounds===
+#mā
+#*[[蚂螂]]
+#mǎ
+#*[[蚂蜂]]
+#*[[蚂蟥]]
+#*[[蚂蚁]]
+#*[[蚂蚁搬泰山]]
+#*[[蚂蚁啃骨头]]
+#mà
+#*[[蚂蚱]]
 
 * '''Other info''': 
 
