--- a/wiki/greedy.wikitext
+++ b/wiki/greedy.wikitext
@@ -1,1 +1,19 @@
-*Afrikaans: [[gulsig]] ''adj''
+==English==
+===Adjective===
+'''greedy'''
+
+# {{stub}}
+
+====Synonym====
+*[[gluttonous]]
+
+===Translations===
+*Afrikaans: [[gulsig]] 
+*Chinese: [[贪吃的]], [[贪婪的]]
+*Italian: [[ingordo]], [[avido]]
+*Japanese: [[貪欲な]]
+
+===Related terms===
+*[[greed]]
+*[[greediness]]
+*[[greedy-guts]]
