--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -31,7 +31,7 @@
 *Swedish: [[kalv]] ''c'' (1,2)
 
 ===Etymology 2===
-Old Norse
+Old Norse kálfi, possibly from Irish calpa
 
 ===Noun===
 '''calf'''
