--- a/wiki/forest.wikitext
+++ b/wiki/forest.wikitext
@@ -19,6 +19,7 @@
 *Finnish: [[metsä]] (1)
 *French: [[forêt]] ''f''
 *German: [[Wald]] ''m''
+*Hebrew: [[יער]]
 *Hungarian: [[erdő]], [[erdőség]]
 *Interlingua: [[foreste]]
 *Italian: [[foresta]] ''f''
@@ -57,3 +58,6 @@
 *[[wood]]
 *[[woodland]]
 *[[woods]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[хворост]] /hvorost/ ([[brushwood]]) in '''forest'''
