--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -2,6 +2,7 @@
 ===Pronunciation===
 *SAMPA: /kA:f/
 ===Etymology 1===
+*Old West Saxon ''cealf'' 
 ===Noun===
 '''calf''' (plural: '''calves''')
 
@@ -31,7 +32,7 @@
 *Swedish: [[kalv]] ''c'' (1,2)
 
 ===Etymology 2===
-Old Norse kálfi, possibly from Irish calpa
+Old Norse ''kálfi'', possibly from Irish ''calpa''
 
 ===Noun===
 '''calf'''
