--- a/wiki/duty.wikitext
+++ b/wiki/duty.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
 ===Noun===
 '''duty'''
 #that which one is morally or legally required to do
@@ -7,8 +6,9 @@
 #period of time spent at work or doing a particular task
 #:''I'm on duty from 6 pm to 6 am.''
 
-====translation====
-*[[Russian]]: [[долг]], [[дежурство]]
-
-==[[multilingual associations]]==
-*[[Russian]]: мои [[дети]] /moji d'eti/ - ([[children]])- [[my]] '''duty'''
+====Translations====
+*Chinese: [[责任]], [[义务]]
+*French: [[devoir]] ''m''
+*Italian: [[dovere]] ''m''
+*Japanese: [[義務]], [[税]]
+*Russian: [[долг]], [[дежурство]]
