--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -2,7 +2,8 @@
 ===Pronunciation===
 *SAMPA: /kA:f/
 ===Etymology 1===
-*Old West Saxon ''cealf'' 
+Old West Saxon ''cealf''
+
 ===Noun===
 '''calf''' (plural: '''calves''')
 
