--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -7,7 +7,7 @@ Old West Saxon ''cealf''
 ===Noun===
 '''calf''' (plural: '''calves''')
 
-#A young [[cattle]].
+#A young cow.
 #A young [[elephant]], [[seal]] or [[whale]] (''also used of some other animals'')
 
 ====Related words====
