--- a/wiki/%E6%96%B0.wikitext
+++ b/wiki/%E6%96%B0.wikitext
@@ -26,6 +26,42 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': san1
 
+===Compounds===
+*[[新编]]
+*[[新兵]]
+*[[新茶]]
+*[[新潮]]
+*[[新陈代谢]]
+*[[新仇旧恨]]
+*[[新创]]
+*[[新春]]
+*[[新词]]
+*[[新簇簇]], [[新簇簇的]]
+*[[新村]]
+*[[新房]]
+*[[新风]]
+*[[新妇]]
+*[[新姑爷]]
+*[[新寡]]
+*[[新官上任三把火]]
+*[[新贵]]
+*[[新花样]], [[新花样儿]]
+*[[新纪录]]
+*[[新加坡]]
+*[[新近]]
+*[[新年]]
+*[[新娘]]
+*[[新派]], [[新派儿]]
+*[[新篇章]]
+*[[新瓶装旧酒]]
+*[[新奇]]
+*[[新气象]]
+*[[新巧]]
+*[[新秋]]
+*[[新区]]
+*[[新人]]
+*[[新任]]
+
 * '''Other info''': 
 
 ----
@@ -36,8 +72,8 @@
 ** '''[[On]]''': [[しん]] (shin)
 ** '''[[Kun]]''': [[あたらしい]] (atarashii), [[あらた]] (arata), [[にい]] (nii)
 
-* '''Compounds''':
-** [[新幹線]] (しんかんせん, shinkansen)
+===Compounds===
+*[[新幹線]] (しんかんせん, shinkansen)
 
 * '''Other info''':  
 
