--- a/wiki/%E6%96%B0.wikitext
+++ b/wiki/%E6%96%B0.wikitext
@@ -46,9 +46,29 @@
 *[[新官上任三把火]]
 *[[新贵]]
 *[[新花样]], [[新花样儿]]
+*[[新欢]]
+*[[新婚]]
+*[[新货]]
 *[[新纪录]]
+*[[新纪元]]
 *[[新加坡]]
+*[[新家娘]]
+*[[新交]]
+*[[新教]]
 *[[新近]]
+*[[新进]]
+*[[新旧]]
+*[[新居]]
+*[[新来乍到]]
+*[[新郎]]
+*[[新历]]
+*[[新绿]]
+*[[新貌]]
+*[[新苗]]
+*[[新民主主义革命]]
+*[[新名词]], [[新名词儿]]
+*[[新茗]]
+*[[新能源]]
 *[[新年]]
 *[[新娘]]
 *[[新派]], [[新派儿]]
@@ -61,6 +81,40 @@
 *[[新区]]
 *[[新人]]
 *[[新任]]
+*[[新生]]
+*[[新生代]]
+*[[新诗]]
+*[[新石器时代]]
+*[[新式]]
+*[[新手]], [[新手儿]]
+*[[新书]]
+*[[新文化运动]]
+*[[新闻]]
+*[[新闻发布会]]
+*[[新闻公报]]
+*[[新西兰]]
+*[[新媳妇儿]]
+*[[新禧]]
+*[[新鲜]]
+*[[新兴]]
+*[[新星]]
+*[[新型]]
+*[[新秀]]
+*[[新药]]
+*[[新义]]
+*[[新异]]
+*[[新颖]]
+*[[新雨]]
+*[[新约]]
+*[[新月]]
+*[[新崭崭]], [[新崭崭的]]
+*[[新张]]
+*[[新知]]
+*[[新址]]
+*[[新著]]
+*[[新妆]]
+*[[新装]]
+*[[新作]]
 
 * '''Other info''': 
 
@@ -74,6 +128,22 @@
 
 ===Compounds===
 *[[新幹線]] (しんかんせん, shinkansen)
+*[[新規]]
+*[[新教]]
+*[[新月]]
+*[[新語]]
+*[[新興]]
+*[[新種]]
+*[[新酒]]
+*[[新生]]
+*[[新品]]
+*[[新聞]]
+*[[新薬]]
+*[[新約聖書]]
+*[[新暦]]
+*[[新入り]]
+*[[新型]]
+*[[新手]]
 
 * '''Other info''':  
 
