--- a/wiki/%E8%94%B7.wikitext
+++ b/wiki/%E8%94%B7.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': rose
+* '''Common Meaning''': [[rose]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,9 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[薔]]
+
+===Compaunds===
+*[[蔷薇]]
 
 * '''Other info''': 
 
