--- a/wiki/%E8%8A%92.wikitext
+++ b/wiki/%E8%8A%92.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': miscanthus sinensis
+* '''Common Meaning''': [[miscanthus]] sinensis
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,15 +26,24 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mong4
 
+===Compounds===
+*[[芒刺在背]]
+*[[芒果]]
+*[[芒硝]]
+*[[芒种]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぼう]] (bō), [[もう]] (mō), [[こう]] (kō)
 ** '''[[Kun]]''': [[のぎ]] (nogi), [[すすき]] (susuki)
+
+===Compounds===
+*[[芒然]]
 
 * '''Other info''':  
 
