--- a/wiki/garlic.wikitext
+++ b/wiki/garlic.wikitext
@@ -41,3 +41,6 @@
 *[[w:garlic|Wikipedia article on garlic]]
 
 [[sv:Garlic]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[горький]] /gor'kij/ ([[bitter]]) '''garlik''' в горле /v gorl'e/ (in [[throat]])
