--- a/wiki/doux.wikitext
+++ b/wiki/doux.wikitext
@@ -2,7 +2,14 @@
 ===Adjective===
 '''doux''' ''m'' (''f'' '''[[douce]]''', ''m plural'' '''doux''', ''f plural'' '''douces''')
 
-#[[soft]]
 #[[sweet]]
+#[[soft]]
 #[[mild]]
 #[[gentle]]
+
+===Related terms===
+*[[douceâtre]]
+*[[doucement]]
+*[[doucereux]]
+*[[doucettement]]
+*[[douceur]]
