--- a/wiki/douceur.wikitext
+++ b/wiki/douceur.wikitext
@@ -1,8 +1,17 @@
 ==English==
-
 ===Noun===
-
 '''douceur'''
 
 #Gentleness and sweetness of manner; agreeableness.
 #A gift for service done or to be done; an honorarium; a present; sometimes, a bribe.
+
+----
+
+==French==
+===Noun===
+'''douceur''' ''f''
+
+# [[softness]], [[tenderness]]
+
+===Related terms===
+*[[doux]] / [[douce]]
