--- a/wiki/generous.wikitext
+++ b/wiki/generous.wikitext
@@ -1,4 +1,5 @@
 == English ==
+
 === Adjective ===
 # not petty in character and mind
 # willing to give and share unsparingly
@@ -6,3 +7,10 @@
 
 === Etymology ===
 First attested in [[1588]], from [[Middle French]] [[généreux]], from [[Latin]] [[generosus]] "of noble birth," from [[genus]] "race, stock".
+
+====translation====
+*[[Hebrew]]: [[נדיב]]
+*[[Russian]]: [[щедрый]]
+
+==[[multilingual associations]]==
+*[[Russian]]: '''generous''' нёс /njos/ (carried) жене роз /Zen'e roz/ (to [[wife]] [[rose]]s)
