--- a/wiki/gab.wikitext
+++ b/wiki/gab.wikitext
@@ -1,13 +1,14 @@
 ==English==
-
 ===Noun===
+'''gab'''
+
+# {{stub}}
 
 ===Verb===
 '''to gab'''
 # to [[talk]] or [[chatter]] a lot, usually on unimportant subjects.
 
+----
+
 ==German==
 # past tense of [[geben]].
-
-==[[multilingual associations]]==
-*[[Russian]]: '''gab''' gub /gub/ (of [[lips]])
