--- a/wiki/garlic.wikitext
+++ b/wiki/garlic.wikitext
@@ -1,11 +1,9 @@
 ==English==
-
 ===Pronunciation===
 *[[w:IPA|IPA]] /ˈɡɑː(r)lɪk/
 *[[w:SAMPA|SAMPA]] /'gA:(r)lIk/
 
 *'''Hyphenation:''' gar·lic
-
 
 ===Noun===
 '''garlic''' ([[uncountable]], [[countable]])
@@ -26,7 +24,7 @@
 *[[Hausa]]: [[àlbásà mai go]]
 *Hebrew: [[שום]] ''m''
 *Italian: [[aglio]] ''m''
-*Japanese: [[ニンニク]] (ninniku)
+*Japanese: [[大蒜]] ([[にんにく]], ninniku)
 *Korean: [[마늘]] (maneul)
 *Latin: [[allium]] ''n''
 *Polish: [[czosnek]] ''m''
@@ -37,10 +35,5 @@
 *Swedish: [[vitlök]] ''c'' (1,2)
 
 ===See also===
-
 *[[w:garlic|Wikipedia article on garlic]]
-
 [[sv:Garlic]]
-
-==[[multilingual associations]]==
-*[[Russian]]: [[горький]] /gor'kij/ ([[bitter]]) '''garlik''' в горле /v gorl'e/ (in [[throat]])
