--- a/wiki/generous.wikitext
+++ b/wiki/generous.wikitext
@@ -9,8 +9,9 @@
 First attested in [[1588]], from [[Middle French]] [[généreux]], from [[Latin]] [[generosus]] "of noble birth," from [[genus]] "race, stock".
 
 ====translation====
+*Chinese: [[慷慨的]]
+*French: [[généreux]]
 *[[Hebrew]]: [[נדיב]]
+*Italian: [[generoso]]
+*Japanese: [[気前のいい]], [[寛大な]]
 *[[Russian]]: [[щедрый]]
-
-==[[multilingual associations]]==
-*[[Russian]]: '''generous''' нёс /njos/ (carried) жене роз /Zen'e roz/ (to [[wife]] [[rose]]s)
