--- a/wiki/generosity.wikitext
+++ b/wiki/generosity.wikitext
@@ -1,7 +1,15 @@
 == English ==
+
 === Noun ===
 # the trait of being willing to give your money and/or time
 # acting [[generously]]
 
 === Etymology ===
 See etymology section in [[generous]]
+
+====translation====
+*[[Hebrew]]: [[נדיבות]]
+*[[Russian]]: [[щедрость]]
+
+==[[multilingual associations]]==
+*[[Russian]]: жену поразите /Zenu porazit'e / ([[wife]] [[amaze]]) by '''generosity'''
