--- a/wiki/generosity.wikitext
+++ b/wiki/generosity.wikitext
@@ -8,8 +8,7 @@
 See etymology section in [[generous]]
 
 ====translation====
+*French: [[générosité]]
 *[[Hebrew]]: [[נדיבות]]
+*Italian: [[generosità]]
 *[[Russian]]: [[щедрость]]
-
-==[[multilingual associations]]==
-*[[Russian]]: жену поразите /Zenu porazit'e / ([[wife]] [[amaze]]) by '''generosity'''
