--- a/wiki/%E9%9B%AA.wikitext
+++ b/wiki/%E9%9B%AA.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#snow
+*# [[snow]]
 *# wipe away shame, avenge
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,58 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': syut3
 
+===Compounds===
+*[[雪白]]
+*[[雪豹]]
+*[[雪暴]]
+*[[雪崩]]
+*[[雪车]]
+*[[雪耻]]
+*[[雪地]]
+*[[雪堆]]
+*[[雪糕]]
+*[[雪恨]]
+*[[雪花]]
+*[[雪花膏]]
+*[[雪茄]]
+*[[雪窖冰天]]
+*[[雪景]]
+*[[雪里红]], [[雪里蕻]]
+*[[雪里送炭]]
+*[[雪梨酒]]
+*[[雪莲]]
+*[[雪亮]]
+*[[雪盲]]
+*[[雪泥鸿爪]]
+*[[雪片]]
+*[[雪橇]]
+*[[雪青]]
+*[[雪人]], [[雪人儿]]
+*[[雪山]]
+*[[雪上加霜]]
+*[[雪松]]
+*[[雪条]]
+*[[雪线]]
+*[[雪压]]
+*[[雪野]]
+*[[雪冤]]
+*[[雪原]]
+*[[雪灾]]
+*[[雪中送炭]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せつ]] (setsu), [[せち]] (sechi)
 ** '''[[Kun]]''': [[ゆき]] (yuki), [[すすぐ]] (susugu)
+
+===Compounds===
+*[[雪辱]]
+*[[雪崩]]
 
 * '''Other info''':  
 
