--- a/wiki/glass.wikitext
+++ b/wiki/glass.wikitext
@@ -1,8 +1,9 @@
-==Etymology==
+==English==
+===Etymology===
 From the Old English, ''gloes'', which may have come from Old Saxon or Old High German, ''glas'', which (in OHG) reffered to gloss for electrum amber. These words are developed from Old Teutonic, ''glaso''.
 It is possible that ultimate root is from a variant of the Old Teutonic word ''glo'' ('''gla''', which meant to "glow" or "shine".
 
-==Noun==
+===Noun===
 '''glass''' (''[[countable]] and [[uncountable]]''; ''plural'' '''glasses''')
 
 #(''[[uncountable]]'') A solid, transparent [[substance]] made by melting [[sand]] with a mixture of [[soda]], [[potash]] and [[lime]].
@@ -20,9 +21,9 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *Dutch: [[glaas]] ''n''
 *Finnish: [[lasi#Finnish|lasi]]
 *French: [[verre]] ''m''
-*German: Glas [[:de:Glas|(de)]] ''n''
+*German: [[Glas]] [[:de:Glas|(de)]] ''n''
 * {{ga}}: [[gloine]] ''f4''
-*Hebrew: [[:he:זכוכית|זכוכית]] /zhuhit/ ''f''
+*Hebrew: [[זכוכית]] /zhuhit/ ''f''
 *Italian: [[vetro]] ''m''
 *Japanese: [[ガラス]] (garasu, [[硝子]])
 *Polish: [[szkło]] ''n''
@@ -32,10 +33,10 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 {|
 *Portuguese: [[vidro]] ''m''
 *Romanian: [[sticlă]] ''f''
-*Russian: [[:ru:стекло|стекло]] /steklo/
+*Russian: [[стекло]] (stjeklo)
 *Slovak: [[sklo#Slovak|sklo]] ''n''
 *Spanish: [[vidrio]] ''m''
-*Swedish: [[:sv:glas|glas]] ''n''
+*Swedish: [[glas]] ''n''
 *[[Tagalog]]: [[salamin]] ''n''
 |}
 |}
@@ -47,10 +48,10 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 {|
 *Dutch: [[glaas]] ''n''
 *Finnish: [[lasi#Finnish|lasi]]
-*French: verre [[:fr:verre|(fr)]] ''m''
-*German: Glas [[:de:Glas|(de)]] ''n''
+*French: [[verre]] [[:fr:verre|(fr)]] ''m''
+*German: [[Glas]] [[:de:Glas|(de)]] ''n''
 *{{ga}}: [[gloine]] ''f4''
-*Hebrew: [[:he:כוס|כוס]] /kos/ ''f''
+*Hebrew: [[כוס]] (kos) ''f''
 *Italian: [[bicchiere]] ''m''
 *Japanese: [[グラス]] (gurasu)
 *Polish: [[szklanka]] ''f'', [[kieliszek]] ''m'' (''for alcoholic drinks'')
@@ -60,9 +61,9 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 {|
 *Portuguese: [[copo]] ''m''
 *Romanian: [[pahar]] ''n''
-*Russian: [[:ru:стакан|стакан]] /stakan/ ''m''
+*Russian: [[стакан]] /stakan/ ''m''
 *Slovak: [[pohár#Slovak|pohár]] ''m''
-*Spanish: vaso [[:es:vaso|(es)]] ''m''
+*Spanish: [[vaso]] [[:es:vaso|(es)]] ''m''
 *Swedish: [[glas]] ''n''
 *[[Tagalog]]: [[baso]] ''n''
 |}
@@ -76,7 +77,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *Dutch: [[glaas]] ''n''
 *Finnish: [[lasi#Finnish|lasi]]
 *French: [[verre]] ''m''
-*German: Glas [[:de:Glas|(de)]] ''n''
+*German: [[Glas]] [[:de:Glas|(de)]] ''n''
 *{{ga}}: [[gloine]] ''f4''
 *Japanese: [[ガラス]] (garasu)
 |}
@@ -112,6 +113,3 @@ The translations below need to be checked by native speakers and then inserted i
 '''glass'''
 
 #[[ice cream]]
-
-==[[multilingual associations]]==
-*[[Russian]]: '''glass''' for [[глаз]] /glaz/ ([[eye]])
