--- a/wiki/%E6%A5%BC.wikitext
+++ b/wiki/%E6%A5%BC.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': building of two or more stories
+* '''Common Meaning''': [[building]] of two or more stories
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,31 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[樓]]
 
+===Compounds===
+*[[楼板]]
+*[[楼层]]
+*[[楼道]]
+*[[楼顶]]
+*[[楼房]]
+*[[楼阁]]
+*[[楼上]]
+*[[楼台]]
+*[[楼梯]]
+*[[楼下]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ろう]] (rō)
 ** '''[[Kun]]''': [[たかどの]] (takadono)
+
+===Compounds===
+*[[楼閣]]
+*[[楼上]]
 
 * '''Other info''':  
 
