--- a/wiki/%E6%A5%BC.wikitext
+++ b/wiki/%E6%A5%BC.wikitext
@@ -12,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': [[building]] of two or more stories
+* '''Common Meaning''': [[building]] of two or more storeys
 
 ----
 
