--- a/wiki/%E6%88%98.wikitext
+++ b/wiki/%E6%88%98.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': war, fighting, battle
+* '''Common Meaning''': [[war]], [[fight]]ing, [[battle]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,17 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[戰]]
+
+===Compounds===
+*[[战败]]
+*[[战报]]
+*[[战备]]
+*[[战表]]
+*[[战场]]
+*[[战车]]
+*[[战尘]]
+*[[战船]]
+*[[战刀]]
 
 * '''Other info''': 
 
