--- a/wiki/message.wikitext
+++ b/wiki/message.wikitext
@@ -1,2 +1,3 @@
 [[category:Wiktionary Internals - Content Work Required|Questionable Entry  - Please Check]]
+[[category:Questionable Entry  - Please Check]]
 concept conveyed by symbology--[[User:Robt.D.McKenzie|Robt]] 16:42, 26 Oct 2004 (UTC)
