more concise; +syns & see also <繁體字#49834>

--- a/wiki/%E7%B9%81%E9%AB%94%E5%AD%97.wikitext
+++ b/wiki/%E7%B9%81%E9%AB%94%E5%AD%97.wikitext
@@ -1,4 +1,13 @@
 ==Chinese==
+===Noun===
 [[繁]][[體]][[字]] (fántǐzì)
-#'''Traditional Chinese''' characters are used in the Republic of China (Taiwan) and Hong-Kong; they have been replaced in the People's Republic of China by [[Simplified Chinese]] ([[简体字]]) .
-In countries which borrowed Chinese writing (Korea etc.), characters resemble Traditional Chinese more than [[Simplified Chinese]].
+
+# [[Traditional Chinese]] characters, as used in the Republic of China (Taiwan) and Hong-Kong.
+#:Note: This term is preferred by users of simplified characters
+
+====Synonyms====
+*[[正體字]], [[正体字]] (zhèngtǐzì) (complex characters)
+*[[老字]] (lǎozì) (old characters)
+
+===See also===
+*[[简体字]] (simplified characters)
