+zh compound; wikification <繁#23572>

--- a/wiki/%E7%B9%81.wikitext
+++ b/wiki/%E7%B9%81.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': complicated, complex, difficult
+* '''Common Meaning''': [[complicated]], [[complex]], [[difficult]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -28,11 +28,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': faan4
 
+* '''Compounds''':
+**[[繁體字]] (fántǐzì)
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はん]] (han)
@@ -42,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 번, 반
+* '''[[Hangeul]]''': [[번]], [[반]]
 
 * '''[[Eumhun]] reading''': 
 
