+zh compound; wikificaiton <體#31874>

--- a/wiki/%E9%AB%94.wikitext
+++ b/wiki/%E9%AB%94.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#body
-*# group, class, body, unit
-
+*#[[body]]
+*# [[group]], [[class]], [[body]], [[unit]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,11 +33,14 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[体]]
 
+* '''Compounds''':
+**[[繁體字]] (fántǐzì)
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[てい]] (tei), [[たい]] (tai)
@@ -48,9 +50,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 체
+* '''[[Hangeul]]''': [[체]]
 
 * '''[[Eumhun]] reading''': 
 
