--- a/wiki/%E6%88%98.wikitext
+++ b/wiki/%E6%88%98.wikitext
@@ -41,6 +41,65 @@
 *[[战尘]]
 *[[战船]]
 *[[战刀]]
+*[[战地]]
+*[[战抖]]
+*[[战斗]]
+*[[战斗机]]
+*[[战斗舰]]
+*[[战斗力]]
+*[[战斗片]], [[战斗片儿]]
+*[[战斗员]]
+*[[战端]]
+*[[战法]]
+*[[战犯]]
+*[[战俘]]
+*[[战歌]]
+*[[战功]]
+*[[战鼓]]
+*[[战国]]
+*[[战果]]
+*[[战壕]]
+*[[战后]]
+*[[战火]]
+*[[战祸]]
+*[[战机]]
+*[[战绩]]
+*[[战舰]]
+*[[战将]]
+*[[战兢兢]]
+*[[战局]]
+*[[战具]]
+*[[战况]]
+*[[战利品]]
+*[[战例]]
+*[[战栗]]
+*[[战列舰]]
+*[[战乱]]
+*[[战略]]
+*[[战略物资]]
+*[[战马]]
+*[[战幕]]
+*[[战评]]
+*[[战前]]
+*[[战情]]
+*[[战区]]
+*[[战胜]]
+*[[战时]]
+*[[战士]]
+*[[战事]]
+*[[战书]]
+*[[战术]]
+*[[战天斗地]]
+*[[战天无胜]]
+*[[战线]]
+*[[战役]]
+*[[战鹰]]
+*[[战友]]
+*[[战云]]
+*[[战战兢兢]]
+*[[战阵]]
+*[[战争]]
+*[[战争贩子]]
 
 * '''Other info''': 
 
