[[category:Entry needs Refining  - Please Check]]== <dilettantism#52549>

--- a/wiki/dilettantism.wikitext
+++ b/wiki/dilettantism.wikitext
@@ -1,4 +1,7 @@
-==English==
+[[category:Wiktionary Internals - Content Work Required|Entry needs 
+
+Refining  - Please Check]]
+[[category:Entry needs Refining  - Please Check]]==English==
 ===Noun===
 
 #The act of behaving like a dilettante, of being an amateur or "dabbler", sometimes in the arts. Also the act of enjoying the arts, being a connoisseur.  Can be perceived as superficial.
