--- a/wiki/%E7%B9%81%E9%AB%94%E5%AD%97.wikitext
+++ b/wiki/%E7%B9%81%E9%AB%94%E5%AD%97.wikitext
@@ -1,6 +1,6 @@
 ==Chinese==
 ===Noun===
-[[繁]][[體]][[字]] (fántǐzì)
+[[繁]][[體]][[字]] (fántǐzì; traditional characters; simplified: [[繁体字]])
 
 # [[Traditional Chinese]] characters, as used in the Republic of China (Taiwan) and Hong-Kong.
 #:Note: This term is preferred by users of simplified characters
