--- a/wiki/condom.wikitext
+++ b/wiki/condom.wikitext
@@ -15,4 +15,5 @@
 *[[Portuguese]]: [[preservativo]] ''m'', [[camisa-de-vênus]] ''f'', [[camisinha]] ''f''
 *[[Polish]]: [[prezerwatywa]] ''f'', [[kondom]] ''m'' (outdated)
 *[[Romanian]]: [[prezervativ]] ''n''
+*[[Russian]]: [[презерватив]] ''n''
 *[[Spanish]]: [[preservativo]] ''m'', [[condón]] ''m''
