--- a/wiki/earthworm.wikitext
+++ b/wiki/earthworm.wikitext
@@ -8,6 +8,7 @@
 # A figurative reference to [[death]].
 
 ====Translations====
+*Dutch: [[aardworm]]
 *Lithuanian: [[sliekas]] ''m''
 
 ====Reference====
