--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -6,7 +6,7 @@
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
 # Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in the 13th century.
-
+<!--
 ===Etymology===
 From [[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
 
@@ -17,9 +17,15 @@ From [[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
 
 ====Translations====
 *English: [[kamikaze]]
+ -->
+====Derived terms====
+*[[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
+*[[神風タクシー]] (kamikaze takushii)
+
+====Notes====
+*神風 is also the ultimate source of the English word [[kamikaze]], by a circuitous route. The characters appear in [[神風特別攻撃隊]], "神風 special attack unit", the name of one kamikaze unit surely named after the typhoon but given the [[Sino-Japanese]] [[reading]] "shinpū". However "shinpū" is not a word in its own right. The Japanese use the term "special attack unit" written in the abbreviated form [[特攻隊]] (tokkōtai) when referring to the WII suicide pilots.
 
 ===See also===
-*[[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
 *[[切腹]] (seppuku)
 *[[特攻隊]] (tokkōtai)
 *[[腹切]] (hara-kiri)
