--- a/wiki/%E7%9C%8B.wikitext
+++ b/wiki/%E7%9C%8B.wikitext
@@ -11,33 +11,111 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#look, see
-*# examine, scrutinize
+*# [[look]], [[see]]
+*# [[examine]], [[scrutinize]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': kàn (kan4)
-*** '''[[Wade-Giles]]''': k'an<sup>4</sup>
+*** '''[[Pinyin]]''': kān (kan1), kàn (kan4)
+*** '''[[Wade-Giles]]''': k'an<sup>1</sup>, k'an<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hon1, hon3
 
+===Verb===
+kàn
+# [[watch]], [[read]]
+
+===Compounds===
+#kān
+#*[[看财奴]]
+#*[[看大]]
+#*[[看管]]
+#*[[看护]]
+#*[[看家]]
+#*[[看家狗]]
+#*[[看家戏]]
+#*[[看门]]
+#*[[看青]]
+#*[[看守]]
+#*[[看守内阁]]
+#*[[看守所]]
+#*[[看押]]
+#*[[看住]]
+#kàn
+#*[[看扁]]
+#*[[看病]]
+#*[[看不惯]]
+#*[[看不过去]]
+#*[[看不起]]
+#*[[看茶]]
+#*[[看穿]]
+#*[[看待]]
+#*[[看得起]]
+#*[[看低]]
+#*[[看跌]]
+#*[[看法]]
+#*[[看风色]]
+#*[[看风使舵]]
+#*[[看顾]]
+#*[[看官]]
+#*[[看惯]]
+#*[[看好]]
+#*[[看见]]
+#*[[看开]]
+#*[[看来]]
+#*[[看你]]
+#*[[看破]]
+#*[[看破红尘]]
+#*[[看齐]]
+#*[[看起来]]
+#*[[看亲]]
+#*[[看轻]]
+#*[[看清]]
+#*[[看热闹]]
+#*[[看人下菜]]
+#*[[看日子]]
+#*[[看上]]
+#*[[看上去]]
+#*[[看手相]]
+#*[[看死]]
+#*[[看台]]
+#*[[看头]]
+#*[[看透]]
+#*[[看望]]
+#*[[看相]]
+#*[[看笑话]]
+#*[[看样子]]
+#*[[看医生]]
+#*[[看涨]]
+#*[[看中]]
+#*[[看重]]
+#*[[看准]]
+#*[[看座]]
+#*[[看做]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
 ** '''[[Kun]]''': [[みる]] (miru)
+
+===Compounds===
+*[[看護]]
+*[[看守]]
+*[[看板]]
+*[[看病]]
 
 * '''Other info''':  
 
@@ -59,7 +137,7 @@
 
 == [[Vietnamese]] [[Quốc ngữ]] ==
 
-* '''Reading''': trầu
+* '''Reading''': trầu <!--it is probably 訓 reading-->
 
 ----
 
