/* Translations */ +tamil; i think there is a herb or spice plant independent of curry powder; this article has a bit of encyclopedic cruft which maybe should just all go under "see also" <curry#38370>

--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -10,6 +10,7 @@
 *Finnish: [[kurry]] (1)
 *German: Curry ''n'' (1, 2)
 *Spanish: curry ''m''
+*Tamil: [[கறி]]
 
 ====Related terms====
 *[[ruby murray]]
