--- a/wiki/ansible.wikitext
+++ b/wiki/ansible.wikitext
@@ -3,7 +3,7 @@
 # sci-fi term to refer to a communication device that enables users to [[instantaneously]] communicate; [[faster-than-light]] communication device;
 
 ====Etymology====
-First attested in 1974 in [[w:The Dispossessed|The Dispossessed]] by [[w:Ursula K. Le Guin|Ursula K. Le Guin]]. It is thought to be derived from ''[[answerable]]".
+First attested in 1974 in [[w:The Dispossessed|The Dispossessed]] by [[w:Ursula K. Le Guin|Ursula K. Le Guin]]. Le Guin herself states that she derived it from ''[[answerable]]''.
 
 ==See also==
 For further information see [[w:ansbile|Wikipedia's article on ansible]]
