--- a/wiki/instantaneous.wikitext
+++ b/wiki/instantaneous.wikitext
@@ -2,7 +2,7 @@
 ===Adjective===
 #Occurring without any delay
 ====Related====
-*[[instantaneously]]
+[[instantaneously]]
 ====Synonyms====
 *[[instant]]
 ====Translation====
