--- a/wiki/nurse.wikitext
+++ b/wiki/nurse.wikitext
@@ -1,5 +1,6 @@
+==English==
 === Etymology ===
-From a Latin root meaning "to [[nourish]]" or "[[feed]]", originally said of someone who was employed to "[[breast feed]]" another mother's child.
+From a Latin root ''[[nutrire]]'' meaning "to [[nourish]]" or "[[feed]]", originally said of someone who was employed to "[[breast feed]]" another mother's child.
 
 === Noun ===
 '''nurse'''
@@ -17,7 +18,8 @@ From a Latin root meaning "to [[nourish]]" or "[[feed]]", originally said of som
 *[[Esperanto]]: [[kuracisto]]
 *French: [[infirmière]] ''f'' (1), [[infirmier]] ''m'' (1), [[nourrice]] ''f'' (2)
 *Indonesian: [[rawat|perawat]], [[suster]]
-*Japanese: [[看護師]] ([[かんごし]], kangoshi), [[看護婦]] ([[かんごふ]], kangofu), [[看護士]] ([[かんごし]], kangoshi), [[ナース]] (nāsu)
+*Italian: [[infermiere]], [[infermiera]]
+*Japanese: [[看護師]] ([[かんごし]], kangoshi; official), [[看護婦]] ([[かんごふ]], kangofu), [[看護士]] (かんごし, kangoshi), [[ナース]] (nāsu)
 *Polish: [[pielęgniarka]] ''f'', [[siostra]] ''f''
 *Slovak: [[sestra]] ''f'', [[ošetrovateľ]] ''m'', [[ošetrovateľka]] ''f''
 *Spanish: [[enfermera]] ''f''
@@ -25,8 +27,6 @@ From a Latin root meaning "to [[nourish]]" or "[[feed]]", originally said of som
 ===See also===
 *[[matron]]
 *[[sister]]
-
-----
 
 === Verb ===
 '''to nurse'''
