split related between synonyms & see also <curry#38370>

--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -5,6 +5,9 @@
 # a mixture of [[spice]]s, also known as ''curry powder''.
 # an Asian [[stew]] made with curry.
 
+====Synonyms====
+*[[ruby murray]] (''rhyming slang'')
+
 ====Translations====
 *Dutch: [[kerrie]] ''m'' (1), curry ''m'' (1)
 *Finnish: [[kurry]] (1)
@@ -12,39 +15,34 @@
 *Spanish: curry ''m''
 *Tamil: [[கறி]]
 
-====Related terms====
-*[[ruby murray]]
-*[[garam masala]]
-*[[tandoor]]
-*[[tandoori]]
-*[[chilli]]
-*[[spice]]
-*[[herb]]
-<!--spellings are common UK transliterations-->
-=====Common (UK?) Types of Curry=====
+====See also====
 *[[balti]]
+*[[bhaji]]
 *[[bhuna]]
 *[[biryani]]
+*[[chilli]]
+*[[chutney]]
 *[[dhansak]]
 *[[dopiaza]]
+*[[garam masala]]
+*[[herb]]
 *[[jalfresi]]
 *[[karahi]]
 *[[korma]]
 *[[madras]]
 *[[moghlai]]
+*[[naan]]
+*[[pakora]]
+*[[papadum]]
+*[[paratha]]
 *[[pasanda]]
 *[[roghan josh]]
+*[[samosa]]
+*[[spice]]
+*[[tandoor]]
+*[[tandoori]]
 *[[tikka masala]]
 *[[vindaloo]]
-
-=====Common (UK?) accompaniments=====
-*[[bhaji]]
-*[[chutney]]
-*[[naan]]
-*[[papadum]]
-*[[pakora]]
-*[[samosa]]
-*[[paratha]]
 
 ===Transitive verb===
 '''to curry'''
