--- a/wiki/stale.wikitext
+++ b/wiki/stale.wikitext
@@ -1,5 +1,9 @@
+==English==
 ===Adjective===
-'''stale'''
+#showing deterioration from age
+#: ''stale meat''
+#no longer new; old
+#:stale news;
 
 ====Antonyms====
 *[[fresh]]
