--- a/wiki/stale.wikitext
+++ b/wiki/stale.wikitext
@@ -3,7 +3,7 @@
 #showing deterioration from age
 #: ''stale meat''
 #no longer new; old
-#:stale news;
+#:''stale news''
 
 ====Antonyms====
 *[[fresh]]
