--- a/wiki/declension.wikitext
+++ b/wiki/declension.wikitext
@@ -6,9 +6,17 @@
 
 
 ====Translations====
+*Arabic: [[تصريف الاسماء|تَصْرِيفُ الأسْمَاء]] (taʂriːfu l-ʔasmaːʔ)
 *Dutch: [[verbuiging]] ''f''
+*Finnish: [[taivutus]]
 *French: [[déclinaison]] ''f''
-*Japanese: [[語形変化]] ([[ごけいへんか]], gokei henka)
+*German: [[Beugung]] ''f'', [[Abwandlung]] ''f'', [[Deklination]] ''f''
+*Greek: [[κλίσις]] (klísis) ''f''
+*Hebrew: [[נטײת]] (netiyat) ''f''
+*Japanese: [[語形変化]] ([[ごけいへんか]], gokei hénka)
+*Latin: [[declinatio]]  ''f''
+*Polish: [[deklinacja]] ''f''
+*Russian: [[склонение]] (sklonénije) ''n''
 *Spanish: [[declinación]] ''f''
 
 ===See also===
