--- a/wiki/declension.wikitext
+++ b/wiki/declension.wikitext
@@ -12,7 +12,7 @@
 *French: [[déclinaison]] ''f''
 *German: [[Beugung]] ''f'', [[Abwandlung]] ''f'', [[Deklination]] ''f''
 *Greek: [[κλίσις]] (klísis) ''f''
-*Hebrew: [[נטײת]] (netiyat) ''f''
+*Hebrew: [[נטײת שמות]] (netiyat shmot) ''f''
 *Japanese: [[語形変化]] ([[ごけいへんか]], gokei hénka)
 *Latin: [[declinatio]]  ''f''
 *Polish: [[deklinacja]] ''f''
