/* Translations */ +tamil <Canada#2315>

--- a/wiki/Canada.wikitext
+++ b/wiki/Canada.wikitext
@@ -20,7 +20,7 @@ From [[Huron]]-[[Iroquoian]] ''kanata'', village.  See [[w:Canada#Origin_of_the_
 *Greek: [[Καναδάς]]
 *Hebrew: [[קנדה]]
 *Hungarian: [[Kanada]]
-*[[Indonesian]]: [[Kanada]]
+*Indonesian: [[Kanada]]
 *[[Interlingua]]: Canada
 *Italian: Canada ''m''
 *Japanese: [[カナダ]] (kanada)
@@ -32,6 +32,7 @@ From [[Huron]]-[[Iroquoian]] ''kanata'', village.  See [[w:Canada#Origin_of_the_
 *Slovene: [[Kanada]] ''f''
 *Spanish: [[Canadá]]
 *Swedish: [[Kanada]]
+*[[Tamil]]: [[கனடா]]
 *Turkish: [[Kanada]]
 *Vietnamese: [[Gia Nã Đại]], [[Ca-na-đa]]
 
