/* Translations */ +tamil <mango#38369>

--- a/wiki/mango.wikitext
+++ b/wiki/mango.wikitext
@@ -19,10 +19,11 @@ Portuguese [[manga]], from Malay [[mangga]], [[manga]], from Tamil ''mān-kāy''
 # The [[fruit]] of the mango tree.
 
 ====Translations====
-*Esperanto: [[mangujo]] (1), [[mango]] (2)
-*Finnish: [[mango]] (1, 2)
+*Esperanto: [[mangujo]] (1), mango (2)
+*Finnish: mango (1, 2)
 *German: [[Mangobaum]] ''m'' (1), Mango ''f'' (2)
 *Latin: [[aniba]] (1)
+*[[Tamil]]: [[மாம்பழம்]]
 
 ====See also====
 *[[w:Mango|Wikipedia article on mangoes]]
