--- a/wiki/forest.wikitext
+++ b/wiki/forest.wikitext
@@ -48,7 +48,7 @@
 <!-- isn't this another case of a noun used as modifier? -->
 
 ====Translations====
-*Bulgarian: [[горски]] ''m'', ''pl'', горска ''f'', горско ''n''
+*Bulgarian: [[горски]] ''m'', ''pl'', [[горска]] ''f'', [[горско]] ''n''
 *Czech: [[lesní]]  
 *Slovak: [[lesný]] ''m'', [[lesná]] ''f'' [[lesné]] ''s'', [[horský]] ''m'', [[horská]] ''f'', [[horské]] ''n''
 
