etym to top; fmt <addictive#65723>

--- a/wiki/addictive.wikitext
+++ b/wiki/addictive.wikitext
@@ -1,5 +1,10 @@
 ==English==
+===Etymology===
+First attested [[w:1914|1914]]. ''Addiction'' in modern sense is first attested [[w:1906|1906]], in reference to [[opium]]. There is an isolated instance from [[w:1779|1779]], with reference to [[tobacco]].
+
 ===Adjective===
+'''addictive''' (more addictive, most addictive)
+
 #Causing or tending to cause addiction; habit-forming
 #:''"addictive drugs"'', ''"an addictive behavior"''
 #Characterized by or [[susceptible]] to addiction: 
@@ -11,12 +16,7 @@
 ====Antonyms====
 *[[nonaddictive]]
 
-====Related====
+====Related terms====
 *[[addict]]
 *[[addicted]]
 *[[addiction]]
-
-====Etymology====
-First attested [[w:1914|1914]]. ''Addiction'' in modern sense is first attested [[w:1906|1906]], in reference to [[opium]]. There is an isolated instance from [[w:1779|1779]], with reference to [[tobacco]].
-
-====Translations====
