--- a/wiki/forest.wikitext
+++ b/wiki/forest.wikitext
@@ -50,7 +50,7 @@
 ====Translations====
 *Bulgarian: [[горски]] ''m'', ''pl'', [[горска]] ''f'', [[горско]] ''n''
 *Czech: [[lesní]]  
-*Slovak: [[lesný]] ''m'', [[lesná]] ''f'' [[lesné]] ''s'', [[horský]] ''m'', [[horská]] ''f'', [[horské]] ''n''
+*Slovak: [[lesný]] ''m'', [[lesná]] ''f'', [[lesné]] ''n'', [[horský]] ''m'', [[horská]] ''f'', [[horské]] ''n''
 
 ===See also===
 *[[bush]]
