changed it - see discussion page - din't like use of hash <rehash#65799>

--- a/wiki/rehash.wikitext
+++ b/wiki/rehash.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Transitive verb===
-# To [[hash]] over again; to prepare or use again; as, to ''rehash'' old arguments.
+# To rework old material (physical material, ideas, documents etc), redo some work, with some variations
 
 ===Noun===
 # Something hashed over, or made up from old materials.
