--- a/wiki/rehash.wikitext
+++ b/wiki/rehash.wikitext
@@ -3,4 +3,4 @@
 # To rework old material (physical material, ideas, documents etc), redo some work, with some variations
 
 ===Noun===
-# Something hashed over, or made up from old materials.
+# Something reworked, or made up from old materials.
