/* Transitive verb */ <rehash#65799>

--- a/wiki/rehash.wikitext
+++ b/wiki/rehash.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Transitive verb===
-# To rework old material (physical material, ideas, documents etc), redo some work, with some variations
+# To rework old material (physical material, ideas, documents etc), redo some work, with some variations; as, to rehash old arguments, rehash a speech, rehash plans
 
 ===Noun===
 # Something reworked, or made up from old materials.
