--- a/wiki/hash.wikitext
+++ b/wiki/hash.wikitext
@@ -10,6 +10,7 @@
 # [[Food]], especially meat and potatoes, [[chop]]ped and [[mix]]ed together.
 # A confused [[mess]].
 # The symbol '''#'''.
+#to make a quick, rough version; as in - hash up some plans = make some quick, rough plans.
 
 ===Related words===
 *[[make a hash of]]
