--- a/wiki/%E8%8D%89.wikitext
+++ b/wiki/%E8%8D%89.wikitext
@@ -1,6 +1,8 @@
+* '''Alternate form''': [[艸]]
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 140''': [[Wiktionary:Chinese radical index 艸|艸]]+6 strokes
 
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
+* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 9|9]]
 
 * '''Stroke order''': 
 
@@ -10,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': [[grass]], [[straw]], [[thatch]], [[herbs]]
+* '''Common Meaning''': [[grass]], [[straw]], [[thatch]], [[herb]]s
 
 ----
 
@@ -26,6 +28,18 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chou2
 
+===Compounds===
+*[[草庵]]
+*[[草案]]
+*[[草把]]
+*[[草草]]
+*[[草根]]
+*[[草荒]]
+*[[草料]]
+*[[草酸]]
+*[[草体]]
+*[[草原]]
+
 * '''Other info''': 
 
 ----
@@ -35,6 +49,11 @@
 * '''Readings'''
 ** '''[[On]]''': [[そう]] (sō)
 ** '''[[Kun]]''': [[くさ]] (kusa)
+
+===Compounds===
+*[[草書]]
+*[[草冠]]
+*[[草木]]
 
 * '''Other info''':  
 
