/* English */ <at the best of times#65861>

--- a/wiki/at_the_best_of_times.wikitext
+++ b/wiki/at_the_best_of_times.wikitext
@@ -1,2 +1,7 @@
 ==English==
+===Adverb===
 #when everything is going well
+#:''"My boredom threshold is low [[at the best of times]] but I have spent more time being slowly and excruciatingly bored by children than any other section of the human race."'' -- [[w:William Edgar Borah|William Edgar Borah]], American statesman
+====Synonyms====
+*[[at best]]
+*[[at the best]]
