--- a/wiki/pesce.wikitext
+++ b/wiki/pesce.wikitext
@@ -1,9 +1,19 @@
-==[[Italian]]==
+==Italian==
+===Noun===
+'''pesce''' ''m''
 
-'''Translations'''
+# [[fish]]
 
-*[[English]]: [[fish]]
-*[[French]]: [[poisson]]
-*[[German]]: [[Fisch]]
-*[[Greek]]: [[ichthos]] (anc.), [[psari]] (mod.)
-*[[Latin]]: [[pisces]]
+===Etymology===
+Latin ''[[piscis]]''
+
+===Related terms===
+*[[pescare]]
+*[[pescetto]]
+*[[pesciaiola]]
+*[[pesciolino]]
+*[[pescione]]
+*[[pescivendolo]]
+*[[pescoso]]
+[[it:pesce]]
+[[ja:pesce]]
